--- a/src/resources/styles/style.scss
+++ b/src/resources/styles/style.scss
@@ -1,3 +1,3 @@
-@import "font";
-@import "variables";
-@import "~bootstrap/scss/bootstrap";
+@import "fonts";
+@import "bootstrap";
+@import "core";
