Cleaning up weather dasboard

--- a/src/resources/styles/_core/_drawer.scss
+++ b/src/resources/styles/_core/_drawer.scss
@@ -30,7 +30,7 @@
 
     .btn-close {
       position: absolute;
-      color: $body-bg;
+      color: $body-color;
       top: 0;
       font-size: 3rem;
       background: transparent;
