--- a/src/resources/styles/_core/_variables.scss
+++ b/src/resources/styles/_core/_variables.scss
@@ -35,3 +35,7 @@ $navbar-padding-x:                  null !default;
 $navbar-nav-link-padding-x:         .5rem !default;
 $navbar-brand-font-size:            $font-size-base * 1.5;
 
+
+// Buttons
+$btn-focus-width:              0;
+$btn-focus-box-shadow:         0;
