--- a/src/components/weather/Weather.module.scss
+++ b/src/components/weather/Weather.module.scss
@@ -7,6 +7,7 @@ $background: #FFFFFF;
   padding: 1rem;
   border-radius: .9rem;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, .098);
+  position: relative;
 
   &:hover {
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, .098);
@@ -14,15 +15,22 @@ $background: #FFFFFF;
 }
 
 .temperature {
-
+  font-size: 2.7rem;
 }
 
 .city {
-
+  font-weight: 700;
 }
 
 .country {
   color: #adb5bd;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 80%;
+}
+
+.weatherIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
