Add weather forecast

--- a/src/resources/styles/_core/_drawer.scss
+++ b/src/resources/styles/_core/_drawer.scss
@@ -31,11 +31,11 @@
     .btn-close {
       position: absolute;
       color: $body-color;
-      top: 0;
-      font-size: 3rem;
+      top: 10px;
+      left: 0;
+      font-size: 2rem;
       background: transparent;
       border: transparent;
-      transform: translateX(-100%);
       line-height: 0;
       padding: .3rem 1.2rem;
       outline: none;
